--- a/CSS/global.css
+++ b/CSS/global.css
@@ -91,6 +91,176 @@ body {
 }
 
 
+/* NAVBAR */
+
+header{
+    width: 100%
+}
+
+.container {
+    padding-left: 1.4rem;
+    padding-right: 1.4rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+#navbar {
+    --navbar-height: 64px;
+    height: var(--navbar-height);
+    background-color: var(--navbar-bg-color);
+    left: 0;
+    right: 0;
+    top: 0;
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) */
+}
+.navbar-container {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    align-items: center;
+}
+.navbar-item {
+    margin: 0.4em;
+    width: 100%;
+}
+
+.navbar-item:hover {
+    cursor: pointer;
+}
+
+.home-link,
+.navbar-link {
+    color: var(--navbar-text-color);
+    text-decoration: none;
+    display: flex;
+    font-weight: 400;
+    align-items: center;
+}
+
+.home-link:is(:focus, :hover) {
+    color: var(--navbar-text-color-focus);
+}
+
+.navbar-link {
+    justify-content: center;
+    width: 100%;
+    padding: 0.4em 0.8em;
+    border-radius: 5px;
+}
+
+.navbar-link:is(:focus, :hover) {
+    color: var(--navbar-text-color-focus);
+    background-color: var(--navbar-bg-contrast);
+}
+
+.navbar-title{
+    font-size: 1.8rem;
+}
+
+#navbar-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    margin: 2px;
+   /* background-color: var(--navbar-text-color);*/
+   background-color: black;
+}
+#navbar-toggle:is(:focus, :hover) .icon-bar {
+    /* background-color: var(--navbar-text-color-focus); */
+    background-color: black;
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:is(:first-child, :last-child) {
+    position: absolute;
+    margin: 0;
+    width: 30px;
+}
+/* first bar of hamburger icon rotates clockwise */
+#navbar-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: rotate(45deg);
+}
+/* second bar of hamburger icon disappears */
+#navbar-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+}
+/* third bar, bottom one i think, rotates counterclockwise */
+#navbar-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: rotate(-45deg);
+}
+#navbar-menu {
+    position: fixed;
+    top: var(--navbar-height);
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    left: 0;
+    right: 0;
+    color:antiquewhite;
+    overflow: hidden;
+}
+#navbar-toggle[aria-expanded="true"] + #navbar-menu {
+    background-color: #eef8fa;
+    opacity: 1;
+    visibility: visible;
+}
+.navbar-links {
+    list-style: none;
+    position: absolute;
+    background-color: var(--navbar-bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    left: 0;
+    right: 0;
+    margin: 1.4rem;
+    border-radius: 5px;
+    margin:0;
+    padding-top: 20px;
+    padding-right: 0;
+    padding-left: 0;
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); */
+}
+
+#navbar-toggle[aria-expanded="true"] + #navbar-menu .navbar-links {
+    padding: 1em;
+    }
+@media screen and (min-width: 2000px) {
+    #navbar-toggle,
+    #navbar-toggle[aria-expanded="true"] {
+        display: none;
+    }
+
+    #navbar-menu,
+    #navbar-toggle[aria-expanded="true"] #navbar-menu {
+        visibility: visible;
+        opacity: 1;
+        position: static;
+        display: block;
+        height: 100%;
+    }
+
+    .navbar-links,
+    #navbar-toggle[aria-expanded="true"] #navbar-menu .navbar-links {
+        margin: 0;
+        padding: 0;
+        box-shadow: none;
+        position: static;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+/* END NAVBAR */
 
 @media(prefers-reduced-motion){
     .text.second-part:before {
@@ -98,7 +268,7 @@ body {
     }
 }
 
-@media screen and(min-width: 1000px){
+@media screen and(min-width: 799px){
     .text-container {
 
         border-right: 1px solid black;
